--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.7.7",
+    "@apollo/server": "^4.3.2",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
-    "graphql": "^15.5.0",
+    "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10"
   },
